[tool.poetry]
name = "repl-nix-menacingmarvelouskeyboardmapping"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_menacingmarvelouskeyboardmapping"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
yfinance = "^0.2.40"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
